# aspire-py

./: apphost.cs  apphost.run.json
.aspire/: settings.json
app-svc-infra/: api.Dockerfile  main.bicep
app-svc-infra/api/: api.bicep
hello/: main.py  pyproject.toml
